# WideBot

./: .gitmodules  CMakeLists.txt  README.md
include/: WideBot.hpp  widebot.hpp
src/: WideBot.cpp  main.cpp  widebot.cpp
